Fixed line break in header

--- a/src/style.less
+++ b/src/style.less
@@ -66,30 +66,32 @@ header, footer, section {
 		background-repeat: no-repeat;
 		background-position: top center;
 		background-size: 1200px;
+
+		.icon {
+			width: 80px;
+		}
+
+		.type {
+			font-size: 32px;
+		}
+
+		h1 {
+			font-size: 24px;
+			max-width: 480px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.hero {
+			width: 100%;
+			max-width: 480px;
+			display: block;
+			margin: 0 auto;
+		}
 	}
 
- .icon {
-		width: 80px;
-	}
-
-	.type {
-		font-size: 32px;
-	}
-
-	h1 {
-		font-size: 24px;
-	}
-
-	.hero {
-		width: 100%;
-		max-width: 480px;
-		display: block;
-		margin: 0 auto;
-	}
 
 }
-
-	
 
 .wrapper.form {background-color: @coral-red;}
 
